# MERCOSURIA-APP-

./: README.md  index.html  tailwind.config.js
mercosuria_files/frontend_files/: INTEGRATION.md  vite.config.ts
mercosuria_files/frontend_files/src/: main.tsx
mercosuria_files/frontend_files/src/components/solana/: CaseCard.tsx  DocumentUploader.tsx  LawyerCard.tsx  LawyerRegistrationForm.tsx  OpenCaseForm.tsx  TxStatus.tsx  WalletButton.tsx  index.ts
mercosuria_files/frontend_files/src/context/: ProgramContext.tsx  SolanaProvider.tsx
mercosuria_files/frontend_files/src/hooks/: useMercosuria.ts
mercosuria_files/frontend_files/src/lib/: idl.ts  mercosuria.ts  mercosuria_idl.json  program.ts
mercosuria_files/frontend_files/src/pages/: MyCasesPage.tsx  OpenCasePage.tsx  RegisterLawyerPage.tsx
mercosuria_files/mercosuria-program/: Anchor.toml  README.md
mercosuria_files/mercosuria-program/programs/mercosuria/: Cargo.toml
mercosuria_files/mercosuria-program/programs/mercosuria/src/: lib.rs
mercosuria_files/mercosuria-program/sdk/: mercosuria.ts
mercosuria_files/mercosuria-program/tests/: mercosuria.ts
src/: App.tsx  index.css
src/components/: BottomNav.tsx  Disclaimer.tsx  LanguageSwitcher.tsx  LiveBanner.tsx  OpportunityGauge.tsx  StatusBadge.tsx  TopBar.tsx
src/lib/: AppContext.tsx  data.ts  i18n.ts
src/pages/: AdviseScreen.tsx  AlertsScreen.tsx  CalculatorScreen.tsx  ComparatorScreen.tsx  CountriesScreen.tsx  DashboardScreen.tsx  EarlyAccessScreen.tsx  HomeScreen.tsx  ImpactScreen.tsx  Index.tsx  NewsScreen.tsx  Onboarding.tsx
