[package]
name = "mercosuria"
version = "0.1.0"
description = "Mercosuria LawTech — Solana smart contract for legal case management, escrow, and reputation"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "mercosuria"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.30.0", features = ["init-if-needed"] }
anchor-spl = "0.30.0"
